# setup-environment-Esteban100800

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Doxyfile  Makefile  MyProject  OperatingSystems
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt  Makefile
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt  Makefile
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main  main.c
tests/: CMakeLists.txt  Makefile  test_OperatingSystems
tests/Testing/Temporary/: CTestCostData.txt
tests/unit/: test_unity_program.c
